--- a/reference/programs/CMakeLists.txt
+++ b/reference/programs/CMakeLists.txt
@@ -8,7 +8,11 @@ file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake)
 foreach(prog csg_boltzmann csg_call csg_density csg_dlptopol csg_dump csg_fmatch csg_gmxtopol csg_imcrepack csg_inverse csg_map
   csg_property csg_resample csg_reupdate csg_stat)
   string(TOUPPER "${prog}" PROG)
+  if(TARGET ${prog})
+    set(${PROG} $<TARGET_FILE:${prog}>)
+  endif()
   find_program(${PROG} ${prog})
+  find_package_handle_standard_args(${PROG} REQUIRED_VARS ${PROG})
   if(NOT ${PROG})
     message(FATAL_ERROR "Could not find ${prog}")
   endif()
