--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_subdirectory(csg)
 set(VOTCA_SHARE ${CMAKE_SOURCE_DIR}/csg/share)
 set(VOTCA_CSG_INVERSE ${CMAKE_BINARY_DIR}/csg/scripts/csg_inverse)
 set(CSG_CALL ${CMAKE_BINARY_DIR}/csg/scripts/csg_call)
+set(CSG_INVERSE ${VOTCA_CSG_INVERSE})
 set(VOTCA_PATH "${CMAKE_BINARY_DIR}/csg/scripts:${CMAKE_BINARY_DIR}/csg/src/tools")
 add_subdirectory(csg-tutorials)
 if(BUILD_CSG_MANUAL)
