--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ services:
 env:
   matrix:
     - TESTOPTS="-E _imc" 
-    - TESTOPTS="-E _imc" COVERAGE=ON
 
 script:
  - cp -vr docker ${HOME}
@@ -30,7 +29,7 @@ script:
    docker cp ${CON}:/home/votca/.ccache ${HOME}/
 
 after_success:
-  - shopt -s extglob && [[ ${TRAVIS_BRANCH} = @(master|stable|v1.*) ]] && DEPLOY=yes
+  - shopt -s extglob && [[ ${TRAVIS_BRANCH} = @(master|stable|v1.*) && ${TRAVIS_JOB_NUMBER} = *.1 ]] && DEPLOY=yes
   - if [[ ${TRAVIS_BRANCH} = master ]]; then DOCKER_TAG=latest; else DOCKER_TAG="${TRAVIS_BRANCH}"; fi
   - if [[ ${DOCKER_USERNAME} && ${DOCKER_PASSWORD} && ${TRAVIS_PULL_REQUEST} == false && ${DEPLOY} ]]; then
         docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
@@ -42,6 +41,7 @@ cache:
 
 compiler:
   - gcc
+  - clang
 
 notifications:
   email:
