cmake: started on manual build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,26 +175,7 @@ add_subdirectory(src/tools)
 #add_subdirectory(share/scripts/dipro)
 add_subdirectory(share)
 
-add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/manual/xtp-manual.pdf COMMAND make -C ${CMAKE_SOURCE_DIR}/manual
-	XTP_SCRIPTS="${XTP_SCRIPTS}"
-	CSG_PROPERTY="${VOTCA_CSG_PROPERTY}"
-	VER=${PROJECT_VERSION}
-	ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}/manual"
-	XTP_PROGS="${XTP_PROGS}" VERBATIM)
-add_custom_target(manual DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/manual/xtp-manual.pdf)
-
-add_custom_target(cleanmanual COMMAND make clean -C ${CMAKE_SOURCE_DIR}/manual
-	XTP_SCRIPTS="${XTP_SCRIPTS}"
-	CSG_PROPERTY="${VOTCA_CSG_PROPERTY}"
-	VER=${PROJECT_VERSION}
-	ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}/manual"
-	XTP_PROGS="${XTP_PROGS}" VERBATIM)
-
-add_custom_target(installmanual COMMAND make install -C ${CMAKE_SOURCE_DIR}/manual
-	XTP_SCRIPTS="${XTP_SCRIPTS}"
-	CSG_PROPERTY="${VOTCA_CSG_PROPERTY}"
-	VER=${PROJECT_VERSION}
-	ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}/manual"
-	XTP_PROGS="${XTP_PROGS}"
-	XTP_MANUAL_LOCATION="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL_LOCATION}" VERBATIM)
-add_dependencies(installmanual manual)
+option(BUILD_XTP_MANUAL "Build csg-manual" OFF)
+if(BUILD_XTP_MANUAL)
+  add_subdirectory(manual)
+endif()
