--- a/manual/reference/programs/CMakeLists.txt
+++ b/manual/reference/programs/CMakeLists.txt
@@ -25,6 +25,21 @@ foreach(prog ${XTP_PROGS})
   list(APPEND PROG_TEXS ${CURRENT_DIR}/${prog}.tex)
   file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake "\\input{${CURRENT_DIR}/${prog}}\n")
 endforeach()
+
+foreach(PROG ${XTP_SCRIPTS})
+  get_filename_component(prog ${PROG} NAME_WE)
+  add_custom_command(OUTPUT ${CURRENT_DIR}/${prog}.tex
+    COMMAND chmod +x ${PROG}
+    COMMAND ${PROG} --help > ${CURRENT_DIR}/${prog}.help
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/help2t2t.sh ${prog} ${CURRENT_DIR}/${prog}.help
+      > ${CURRENT_DIR}/${prog}.t2t
+    COMMAND ${TXT2TAGS_EXECUTABLE} -t tex --no-header --infile ${CURRENT_DIR}/${prog}.t2t
+      --outfile ${CURRENT_DIR}/${prog}.tex
+      DEPENDS ${PROG} ${CURRENT_DIR}/config.t2t)
+  list(APPEND PROG_TEXS ${CURRENT_DIR}/${prog}.tex)
+  file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake "\\input{${CURRENT_DIR}/${prog}}\n")
+endforeach()
+
 add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex 
   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake
     ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex DEPENDS ${PROG_TEXS})
