--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -9,6 +9,6 @@ foreach(SCRIPT xtp_testsuite xtp_update xtp_update_exciton xtp_basisset xtp_make
     -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
-  set(XTP_SCRIPTS "${XTP_SCRIPTS} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
+  list(APPEND XTP_SCRIPTS "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
 endforeach(SCRIPT)
 set(XTP_SCRIPTS "${XTP_SCRIPTS}" PARENT_SCOPE)
