--- a/.travis.yml
+++ b/.travis.yml
@@ -113,7 +113,7 @@ script:
 
 after_success:
   - if [[ ${MAN} && ${CC} = gcc* ]]; then
-      cp "$HOME"/votca/src/{csg-manual,devdoc}/manual.pdf;
+      cp "$HOME"/votca/src/{csg-manual/build,devdoc}/manual.pdf;
       cd "$HOME/votca/src/devdoc";
       if [[ ${TRAVIS_BRANCH} = master && ${encrypted_3780e1dc437f_key} && ${encrypted_3780e1dc437f_iv} && ${TRAVIS_PULL_REQUEST} == false ]]; then
         git config --global user.name "Automatic Deployment (Travis CI)";
