--- a/manual/reference/programs/CMakeLists.txt
+++ b/manual/reference/programs/CMakeLists.txt
@@ -26,11 +26,12 @@ foreach(prog ${XTP_PROGS})
   file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake "\\input{${CURRENT_DIR}/${prog}}\n")
 endforeach()
 
+set(VOTCASHARE ${CMAKE_CURRENT_SOURCE_DIR}/../share)
 foreach(PROG ${XTP_SCRIPTS})
   get_filename_component(prog ${PROG} NAME_WE)
   add_custom_command(OUTPUT ${CURRENT_DIR}/${prog}.tex
     COMMAND chmod +x ${PROG}
-    COMMAND ${PROG} --help > ${CURRENT_DIR}/${prog}.help
+    COMMAND VOTCASHARE=${VOTCASHARE} ${PROG} --help > ${CURRENT_DIR}/${prog}.help
     COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/help2t2t.sh ${prog} ${CURRENT_DIR}/${prog}.help
       > ${CURRENT_DIR}/${prog}.t2t
     COMMAND ${TXT2TAGS_EXECUTABLE} -t tex --no-header --infile ${CURRENT_DIR}/${prog}.t2t
