build xtp-manual, too

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,8 @@ WORKDIR /home/votca/votca
 RUN mkdir build
 WORKDIR build
 RUN ccache -z
-RUN cmake -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr -DLIB=lib64 -DENABLE_TESTING=ON -DBUILD_CSG_MANUAL=ON ..
+RUN cmake -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr -DLIB=lib64 \
+  -DENABLE_TESTING=ON -DBUILD_CSG_MANUAL=ON --DBUILD_XTP_MANUAL=ON ..
 RUN make VERBOSE=1 -j2
 RUN make test ARGS="${TESTOPTS}"
 RUN make install DESTDIR=${PWD}
