trying to undo my errors

--- a/manual/reference/calculators/CMakeLists.txt
+++ b/manual/reference/calculators/CMakeLists.txt
@@ -12,8 +12,8 @@ foreach(prog ${XTP_PROGS})
   set(XTP_PROGS_FULL "${XTP_PROGS_FULL} ${${PROG}}")
 endforeach()
 
-set(CSG_SHARE ${CMAKE_CURRENT_SOURCE_DIR}/../share)
+set(XTP_SHARE ${CMAKE_CURRENT_SOURCE_DIR}/../share)
 add_custom_command(OUTPUT ${CURRENT_DIR}/calculators.tex
-  COMMAND CSG_SHARE=${CSG_SHARE} ${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/extract_calculators.sh ${XTP_PROGS_FULL}
+  COMMAND XTP_SHARE=${XTP_SHARE} ${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/extract_calculators.sh ${XTP_PROGS_FULL}
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}
   DEPENDS ${XTP_PROGS_FULL})
