cmake: fix calculator generation
For manual build we need to set VOTCASHARE to a folder inside the
source, however, xtp_* will look for a folder xtp/xml in there,
which doesn't exist. So moving xml to xtp/xml in share.

--- a/manual/reference/calculators/CMakeLists.txt
+++ b/manual/reference/calculators/CMakeLists.txt
@@ -17,4 +17,4 @@ add_custom_command(OUTPUT ${CURRENT_DIR}/calculators.tex
   COMMAND VOTCASHARE=${VOTCASHARE} VOTCA_PROPERTY=${VOTCA_PROPERTY}
     ${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/extract_calculators.sh ${XTP_PROGS_FULL}
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}
-  DEPENDS ${XTP_PROGS_FULL} ${VOTCA_PROPERTY})
+  DEPENDS ${XTP_PROGS_FULL} ${VOTCA_PROPERTY} ${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/extract_calculators.sh)
