--- a/manual/reference/xml/CMakeLists.txt
+++ b/manual/reference/xml/CMakeLists.txt
@@ -7,8 +7,8 @@ set(VOTCASHARE ${CMAKE_CURRENT_SOURCE_DIR}/../share)
 foreach(XML map.xml options.xml)
   add_custom_command(OUTPUT ${CURRENT_DIR}/${XML}.tex
     COMMAND CSG_PROPERTY=${CSG_PROPERTY} ${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_DIR}/xml2t2t.sh 
-      ${VOTCASHARE}/xml/${XML} > ${CURRENT_DIR}/${XML}.t2t
+      ${VOTCASHARE}/xtp/xml/${XML} > ${CURRENT_DIR}/${XML}.t2t
     COMMAND ${TXT2TAGS_EXECUTABLE} -t tex --no-header --infile ${CURRENT_DIR}/${XML}.t2t
       --outfile ${CURRENT_DIR}/${XML}.tex
-    DEPENDS ${VOTCASHARE}/xml/${XML} ${CURRENT_DIR}/config.t2t)
+    DEPENDS ${VOTCASHARE}/xtp/xml/${XML} ${CURRENT_DIR}/config.t2t)
 endforeach()
