travis: add Debug builds

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,7 @@ ARG COVERAGE
 ARG CC
 ARG CXX
 ARG CXXFLAGS
+ARG CMAKE_BUILD_TYPE
 
 #for coverage
 ARG CI
@@ -28,7 +29,8 @@ WORKDIR /home/votca/votca
 RUN mkdir build
 WORKDIR build
 RUN ccache -z
-RUN cmake -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr -DLIB=lib64 \
+RUN cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
+  -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr -DLIB=lib64 \
   -DENABLE_TESTING=ON -DBUILD_CSG_MANUAL=ON -DBUILD_XTP_MANUAL=ON  ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} ..
 RUN make VERBOSE=1 -j2
 RUN make test CTEST_OUTPUT_ON_FAILURE=1 ARGS="${TESTOPTS}"
