--- a/.travis.yml
+++ b/.travis.yml
@@ -41,15 +41,17 @@ after_success:
   - if [[ ${TRAVIS_JOB_NUMBER} = *.1 ]]; then
       git clone --depth=1 https://github.com/votca/doxygen.git "$HOME/devdoc";
       cd $HOME/devdoc;
+      rm -f *;
       docker cp ${CON}:/home/votca/votca/build/share/doc/html . ;
+      mv html/* .; rmdir html;
       docker cp ${CON}:/home/votca/votca/build/csg-manual/manual.pdf . ;
       docker cp ${CON}:/home/votca/votca/build/xtp/manual/xtp-manual.pdf . ;
-      git add --all html *.pdf;
+      git add --all .;
       if [[ ${TRAVIS_BRANCH} = master && ${encrypted_7abbb71c3ba6_key} && ${encrypted_7abbb71c3ba6_iv} && ${TRAVIS_PULL_REQUEST} == false ]]; then
         git config --global user.name "Automatic Deployment (Travis CI)";
         git config --global user.email "votca-commits@googlegroups.com";
         git commit -m "Documentation Update";
-        openssl aes-256-cbc -K $encrypted_7abbb71c3ba6_key -iv $encrypted_7abbb71c3ba6_iv -in deploy3.enc -out ~/.ssh/id_rsa -d;
+        openssl aes-256-cbc -K $encrypted_7abbb71c3ba6_key -iv $encrypted_7abbb71c3ba6_iv -in keys/deploy3.enc -out ~/.ssh/id_rsa -d;
         chmod 600 ~/.ssh/id_rsa;
         git push git@github.com:votca/doxygen.git gh-pages;
       else
