--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
     - TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release DOCKERHUB=yes
     - TESTING=OFF CMAKE_BUILD_TYPE=Release WERROR=yes
 #useless for votca/votca, but for coverage of individual modules
-    - TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release COVERAGE=yes
+    - TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
     - TESTING=OFF CMAKE_BUILD_TYPE=Release DOXYGEN=yes
 
 matrix:
