--- a/src/libcsg/CMakeLists.txt
+++ b/src/libcsg/CMakeLists.txt
@@ -18,16 +18,15 @@ else(WITH_GMX)
 endif(WITH_GMX)
 
 
-option(WITH_H5MD "Build H5MD reader!" OFF)
-if(WITH_H5MD)
-    find_package(HDF5 REQUIRED COMPONENTS "C")
+find_package(HDF5 COMPONENTS "C")
+if(HDF5_FOUND)
   set(H5MD true)
   include_directories (${HDF5_INCLUDE_DIRS})
-else(WITH_H5MD)
+else(HDF5_FOUND)
   set(H5MD)
   set(H5MD_SOURCES)
   set(HDF5_LIBRARIES)
-endif(WITH_H5MD)
+endif(HDF5_FOUND)
 
 configure_file(votca_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/votca_config.h)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
