--- a/.travis.yml
+++ b/.travis.yml
@@ -1,104 +1,99 @@
-#the original source of this file can be found in tools repository change it ther
-# changes in tools|csg tiggered a full rebuild
-# changes in csgapps|csg-manual|csg-tutorials only trigger tools+csg+ifself
-
+# the original source of this file can be found in votca/votca repository
+# add changes there!
+# To update:
+# wget -O .travis.yml https://raw.githubusercontent.com/votca/votca/master/.travis.yml
 language: cpp
 
-sudo: false
+sudo: required
 
-addons:
-  apt:
-    sources:
-      - boost-latest 
-      - george-edison55-precise-backports
-      - ubuntu-toolchain-r-test
-    packages:
-      - ccache
-      - gcc-4.8
-      - g++-4.8
-      - libfftw3-dev
-      - cmake
-      - cmake-data
-      - libgsl0-dev
-      - txt2tags
-      - libboost1.55-all-dev
-      - libexpat1-dev
-      - libsqlite3-dev
-      - libhdf5-serial-dev
-      - pkg-config
-      - pgf
-      - texlive-fonts-recommended
-      - texlive-latex-extra
-      - texlive-latex-recommended
-      - cm-super
-      - doxygen
-      - graphviz
-      - python-numpy
-      - gnuplot-nox
-      - octave
+services:
+- docker
 
 env:
-  global:
-    - HDF5_VERSION=1.8.18
-    - GMX_MAX_THREADS=4
-    - CSG_MDRUN_OPTS="-ntmpi 4"
-    - CCACHE_CPP2=yes #for clang
-    - GVER=4.8
-  matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
-    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi_all J=4
-    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi_nonbonded J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol/ibi J=4
-    - CSG_MDRUN_STEPS=5000 TEST=methanol/imc J=4
-    - CSG_MDRUN_STEPS=2500 TEST=methanol-water/X_0.938/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.938/simplex J=4
-    - CSG_MDRUN_STEPS=2500 TEST=methanol-water/X_0.062/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.062/simplex J=4
-    - CSG_MDRUN_STEPS=2500 TEST=methanol-water/X_0.5/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.5/simplex J=4
-    - CSG_MDRUN_STEPS=500 TEST=propane/ibi J=4
-    - CSG_MDRUN_STEPS=5000 TEST=propane/imc J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/cma/density J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/cma/simple J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/ibi J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/ibi_pressure J=4
-    - CSG_MDRUN_STEPS=5000 TEST=spce/imc J=4
-    - CSG_MDRUN_STEPS=5000 TEST=spce/realtime J=4
-    - CSG_MDRUN_STEPS=2500 TEST=spce/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/simplex/density J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/simplex/pressure J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/simplex/simple J=4
-    - CSG_MDRUN_STEPS=500 TEST=urea-water/ibi J=4
-    - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
-    - CSG_MDRUN_STEPS=500 TEST=urea-water/cibi J=4
-    - CSG_MDRUN_STEPS=500 TEST=urea-water/cibi/pre J=4
-    - CSG_MDRUN_STEPS=500 TEST=LJ1-LJ2/imc J=4
+  matrix:
+    - TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Debug
+    - TESTING=OFF CMAKE_BUILD_TYPE=Debug   WERROR=yes
+    - TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release DOCKERHUB=yes
+    - TESTING=OFF CMAKE_BUILD_TYPE=Release WERROR=yes
+#useless for votca/votca, but for coverage of individual modules
+    - TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
+    - TESTING=OFF CMAKE_BUILD_TYPE=Release DOXYGEN=yes
 
-before_script:
-  - rm -vrf * .git
-  - wget https://raw.githubusercontent.com/votca/buildutil/master/build.sh && chmod 755 build.sh
-  - mkdir -p "$HOME/votca/src"
-  - if [[ ${MINIMAL} != yes ]]; then 
-      wget -qO- https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION%.*}/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
-      cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..;
-    fi
-  - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
+matrix:
+  exclude:
+  - compiler: clang #taking too long
+    env: TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
+  - compiler: clang #no never info when using clang
+    env: TESTING=OFF CMAKE_BUILD_TYPE=Release DOXYGEN=yes 
 
 script:
-  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu $([[ ${TRAVIS_BRANCH} = stable ]] || echo "--dev") --prefix "$HOME/votca"
-    ${TYPE:+-DCMAKE_BUILD_TYPE=${TYPE}}
-    ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal} ${MAN:+--devdoc}
-    ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
-    --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
-    tools $([[ ${MINIMAL} ]] || echo gromacs) csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
-    ${CTP:+kmc moo ctp} ${XTP:+xtp}
+ - git checkout -b current_commit
+ - cd ../../
+ - if [[ ${TRAVIS_REPO_SLUG} = */votca ]]; then
+     cp -vr ${TRAVIS_REPO_SLUG}/docker ${HOME};
+     mv -v ${TRAVIS_REPO_SLUG} $HOME/docker;
+   else
+     git clone --recursive --recursive https://github.com/votca/votca.git $HOME/docker/votca;
+     if [[ ${TRAVIS_BRANCH} != master ]]; then
+       git -C ${HOME}/docker/votca checkout ${TRAVIS_BRANCH} && git -C ${HOME}/docker/votca submodule update --recursive --init;
+     fi;
+     git -C ${HOME}/docker/votca/${TRAVIS_REPO_SLUG#*/} fetch ${PWD}/${TRAVIS_REPO_SLUG} current_commit;
+     git -C ${HOME}/docker/votca/${TRAVIS_REPO_SLUG#*/} checkout -f FETCH_HEAD;
+     cp -vr ${HOME}/docker/votca/docker/* ${HOME}/docker;
+     if [[ -d ${TRAVIS_REPO_SLUG}/docker ]]; then cp -vr ${TRAVIS_REPO_SLUG}/docker/* ${HOME}/docker; fi;
+   fi
+ - cp -r $HOME/.ccache ${HOME}/docker/ccache
+ - docker build  --build-arg TESTOPTS="${TESTOPTS}" --build-arg COVERAGE=${COVERAGE}
+                 --build-arg CC=${CC} --build-arg CXX=${CXX} --build-arg CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+                 --build-arg CXXFLAGS="-Wall ${WERROR:+-Werror}"
+                 --build-arg TESTING=${TESTING} --build-arg DOXYGEN=${DOXYGEN}
+                 --build-arg CI=${CI} --build-arg TRAVIS=${TRAVIS} --build-arg TRAVIS_OS_NAME=fedora
+                 --build-arg TRAVIS_BRANCH=${TRAVIS_BRANCH} --build-arg TRAVIS_JOB_NUMBER=${TRAVIS_JOB_NUMBER}
+                 --build-arg TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} --build-arg TRAVIS_JOB_ID=${TRAVIS_JOB_ID}
+                 --build-arg TRAVIS_TAG=${TRAVIS_TAG} --build-arg TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}
+                 --build-arg TRAVIS_COMMIT=${TRAVIS_COMMIT}
+                 ${TRAVIS_TAG:+-t votca/votca:${TRAVIS_TAG}}
+                 -t votca/votca:latest -t votca/votca:${TRAVIS_BRANCH} ${HOME}/docker/ &&
+   rm -rf $HOME/.ccache &&
+   CON=$(docker run -d votca/votca:${TRAVIS_BRANCH} /bin/bash) &&
+   docker cp ${CON}:/home/votca/.ccache ${HOME}/
+
+after_success:
+  - shopt -s extglob && [[ ${TRAVIS_BRANCH} = @(master|stable|v1.*) && ${CC} = *gcc* && ${DOCKERHUB} = yes ]] && DEPLOY=yes
+  - if [[ ${TRAVIS_BRANCH} = master ]]; then DOCKER_TAG=latest; else DOCKER_TAG="${TRAVIS_BRANCH}"; fi
+  - if [[ ${DOCKER_USERNAME} && ${DOCKER_PASSWORD} && ${TRAVIS_PULL_REQUEST} == false && ${DEPLOY} ]]; then
+        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+        docker push "${TRAVIS_REPO_SLUG}:${DOCKER_TAG}";
+    fi
+  - if [[ ${TRAVIS_JOB_NUMBER} = *.1 ]]; then
+      git clone --depth=1 https://github.com/votca/doxygen.git "$HOME/devdoc";
+      cd $HOME/devdoc;
+      rm -f *;
+      docker cp ${CON}:/home/votca/votca/build/share/doc/html . ;
+      mv html/* .; rmdir html;
+      docker cp ${CON}:/home/votca/votca/build/csg-manual/manual.pdf . ;
+      docker cp ${CON}:/home/votca/votca/build/xtp/manual/xtp-manual.pdf . ;
+      git add --all .;
+      if [[ ${TRAVIS_BRANCH} = master && ${encrypted_7abbb71c3ba6_key} && ${encrypted_7abbb71c3ba6_iv} && ${TRAVIS_PULL_REQUEST} == false ]]; then
+        git config --global user.name "Automatic Deployment (Travis CI)";
+        git config --global user.email "votca-commits@googlegroups.com";
+        git commit -m "Documentation Update";
+        openssl aes-256-cbc -K $encrypted_7abbb71c3ba6_key -iv $encrypted_7abbb71c3ba6_iv -in keys/deploy3.enc -out ~/.ssh/id_rsa -d;
+        chmod 600 ~/.ssh/id_rsa;
+        git push git@github.com:votca/doxygen.git gh-pages;
+      else
+        git status;
+        git diff --cached --no-color | head -n 500;
+      fi;
+    fi
 
 cache:
   - ccache
 
 compiler:
   - gcc
+  - clang
 
 notifications:
   email:
-    recipients: #encrypted votca-commits@googlegroups.com so that fork don't notify us (travis-ci/travis-ci#6100)
-      secure: nescWy1bYq2ALU5ue3Bi7OFpSzUtOkPjitjqH0pUfC/ixfAdl77Iy5xlkaakj4G2J+0bzyIVKuqTeb9uitJ1dauO3yMoRBWvjrYi1BspjPNRtumKIcRBL8TazLxOrBeiVJORrXfjT/p3xTvqSrRd6ngTXU25gEoZxGKeMFWHyQg=
+    - votca-commits@googlegroups.com
