--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
 #useless for votca/votca, but for coverage of individual modules
     - TESTING=ON TESTOPTS="-E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
     - TESTING=OFF CMAKE_BUILD_TYPE=Release DOXYGEN=yes
+    - TESTING=OFF CMAKE_BUILD_TYPE=Release MINIMAL=yes
 
 matrix:
   exclude:
@@ -46,7 +47,7 @@ script:
  - docker build  --build-arg TESTOPTS="${TESTOPTS}" --build-arg COVERAGE=${COVERAGE}
                  --build-arg CC=${CC} --build-arg CXX=${CXX} --build-arg CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
                  --build-arg CXXFLAGS="-Wall ${WERROR:+-Werror}"
-                 --build-arg TESTING=${TESTING} --build-arg DOXYGEN=${DOXYGEN}
+                 --build-arg TESTING=${TESTING} --build-arg DOXYGEN=${DOXYGEN} --build-arg MINIMAL=${MINIMAL}
                  --build-arg CI=${CI} --build-arg TRAVIS=${TRAVIS} --build-arg TRAVIS_OS_NAME=fedora
                  --build-arg TRAVIS_BRANCH=${TRAVIS_BRANCH} --build-arg TRAVIS_JOB_NUMBER=${TRAVIS_JOB_NUMBER}
                  --build-arg TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} --build-arg TRAVIS_JOB_ID=${TRAVIS_JOB_ID}
