--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,8 @@ foreach(DIR ${DIRS})
   set_target_properties(${DIR} PROPERTIES OUTPUT_NAME ${DIR}/csg_${DIR})
   if(ENABLE_TESTING)
     add_test(${DIR}Help ${DIR}/csg_${DIR} --help)
-    set_tests_properties(${PROG}Help PROPERTIES LABELS "csgapps;votca")
+    # run tests for tools and csg as well for coverage
+    set_tests_properties(${PROG}Help PROPERTIES LABELS "csgapps;csg;tools;votca")
   endif(ENABLE_TESTING)
 endforeach(DIR)
 
